Fix invisible cursor over hand

--- a/static/stylesheets/cah.css
+++ b/static/stylesheets/cah.css
@@ -52,5 +52,5 @@ h1 {
     opacity: 0.5;
 }
 .cards.disabled .card {
-    cursor: none;
+    cursor: default;
 }
